qtquickcontrols2-opensource-src (5.12.4+dfsg-1) UNRELEASED; urgency=medium

  [ Scarlett Moore ]
  * Update packaging to use doc-base as per policy 9.10.

  [ Dmitry Shachnev ]
  * Update debian/libqt5quicktemplates2-5.symbols from buildds’ logs.
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.4.

 -- Scarlett Moore <sgmoore@kde.org>  Mon, 06 May 2019 10:15:41 -0700

qtquickcontrols2-opensource-src (5.12.3+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Update debian/libqt5quicktemplates2-5.symbols from buildds’ logs.
  * Bump Qt build-dependencies to 5.12.3.
  * Add some new files to qtquickcontrols2-5-dev package.
  * Update debian/libqt5quicktemplates2-5.symbols from the current build log.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 29 Apr 2019 23:00:08 +0300

qtquickcontrols2-opensource-src (5.12.2+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Update debian/libqt5quicktemplates2-5.symbols from buildds’ logs.
  * Bump Qt build-dependencies to 5.12.2.
  * Update debian/copyright.
  * Remove empty fonts directory from the repacked tarball.
  * Upstream has renamed the documentation module from qtquickcontrols2 to
    qtquickcontrols. Adjust the .install files accordingly and add Breaks /
    Replaces against qtquickcontrols5-doc{,-html} < 5.12.
  * Update symbols files from the current build log.
  * Bump pkg-kde-tools build-dependency to 0.15.29 (closes: #905738).

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 24 Mar 2019 20:48:34 +0300

qtquickcontrols2-opensource-src (5.11.3+dfsg-2) unstable; urgency=medium

  [ Simon Quigley ]
  * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
  * Bump Standards-version to 4.3.0, no changes needed.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Dec 2018 16:52:23 -0300

qtquickcontrols2-opensource-src (5.11.3+dfsg-1) experimental; urgency=medium
