@@ -1,0 +1,6 @@
+usr/include/*/qt5/QtQuickControls2/5.*
+usr/include/*/qt5/QtQuickTemplates2/5.*
+usr/lib/*/libQt5QuickControls2.la
+usr/lib/*/libQt5QuickTemplates2.la
+usr/lib/*/qt5/mkspecs/modules/qt_lib_quickcontrols2_private.pri
+usr/lib/*/qt5/mkspecs/modules/qt_lib_quicktemplates2_private.pri
